Fixed minor pixel jump in caption error indicator

--- a/WebContent/VAADIN/themes/base/boxlayout/boxlayout.scss
+++ b/WebContent/VAADIN/themes/base/boxlayout/boxlayout.scss
@@ -165,7 +165,7 @@ div.v-boxlayout.v-horizontal.v-widget {
 }
 
 .v-errorindicator {
-	vertical-align: middle;
+	vertical-align: top;
 }
 
 }
