--- a/WebContent/VAADIN/themes/reindeer/common/common.scss
+++ b/WebContent/VAADIN/themes/reindeer/common/common.scss
@@ -43,7 +43,7 @@
 }
 .v-errorindicator {
 	width: 13px;
-	height: 14px;
+	height: 16px;
 	background: transparent url(../common/icons/error.png) no-repeat 50%;
 }
 .v-tooltip {
